--- a/techdocs/samplecomp.yaml
+++ b/techdocs/samplecomp.yaml
@@ -3,6 +3,8 @@ kind: Component
 metadata:
   name: artist-web
   description: The place to be, for great artists
+  annotations:
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: service
   lifecycle: production
