--- a/techdocs/samplecomp.yaml
+++ b/techdocs/samplecomp.yaml
@@ -10,6 +10,7 @@ spec:
   lifecycle: production
   owner: artist-relations-team
 ---
+apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: artist-relations-team
